fixed gap between sections on mobile and section name

--- a/src/styles/blocks/main.scss
+++ b/src/styles/blocks/main.scss
@@ -3,7 +3,7 @@
 
   &__content {
     display: grid;
-    column-gap: 92px;
+    row-gap: 92px;
     padding: 60px 0 120px;
 
     @include onTablet {
